# community_token_solana_contract

./: Anchor.toml  README.md  package-lock.json  package.json
libs/: burnToken.ts  createMint.ts  createTokenAccount.ts  mintToken.ts  transferToken.ts  uploadTokenMetadata.ts
programs/community/: Cargo.toml
programs/community/src/: lib.rs
tests/: community.ts
