[package]
name = "community"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "community"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["development"]
development = []


[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
